// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders theme dark 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-vwk9sp-gridStyle"
      >
        <div
          class="css-vgo3dv-headerStyle"
        >
          <button
            class="css-uuujmm-ButtonStyle-SmallButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Show 
              light
               mode
            </span>
          </button>
        </div>
        <section
          class="css-zinvco-buttonWrapperStyle"
        >
          <button
            class="css-1xx163k-ButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Primary Button
            </span>
          </button>
          <button
            class="css-1shqap-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Secondary Button
            </span>
          </button>
          <button
            class="css-18lizrn-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent1 Button
            </span>
          </button>
          <button
            class="css-r6elg9-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent2 Button
            </span>
          </button>
          <button
            class="css-1bir3u-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent3 Button
            </span>
          </button>
          <button
            class="css-dbtuv9-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent4 Button
            </span>
          </button>
          <button
            class="css-qkc9hn-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Muted Button
            </span>
          </button>
          <button
            class="css-147k6s6-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Highlight Button
            </span>
          </button>
          <button
            class="css-mqohsn-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Gray Button
            </span>
          </button>
          <button
            class="css-108ffmq-ButtonStyle-MediumButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Medium Button
            </span>
          </button>
          <button
            class="css-14i8ki2-ButtonStyle-SmallButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Small Button
            </span>
          </button>
          <button
            class="css-jkq2c0-ButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Custom theme button
            </span>
          </button>
          <button
            class="css-z1sm09-ButtonStyle-Buttons"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Custom css button
            </span>
          </button>
          <button
            class="css-kg1tm4-ButtonStyle-disabledStyle"
            data-testid=""
            disabled=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Disabled Button
            </span>
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-vwk9sp-gridStyle"
    >
      <div
        class="css-vgo3dv-headerStyle"
      >
        <button
          class="css-uuujmm-ButtonStyle-SmallButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Show 
            light
             mode
          </span>
        </button>
      </div>
      <section
        class="css-zinvco-buttonWrapperStyle"
      >
        <button
          class="css-1xx163k-ButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Primary Button
          </span>
        </button>
        <button
          class="css-1shqap-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Secondary Button
          </span>
        </button>
        <button
          class="css-18lizrn-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent1 Button
          </span>
        </button>
        <button
          class="css-r6elg9-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent2 Button
          </span>
        </button>
        <button
          class="css-1bir3u-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent3 Button
          </span>
        </button>
        <button
          class="css-dbtuv9-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent4 Button
          </span>
        </button>
        <button
          class="css-qkc9hn-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Muted Button
          </span>
        </button>
        <button
          class="css-147k6s6-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Highlight Button
          </span>
        </button>
        <button
          class="css-mqohsn-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Gray Button
          </span>
        </button>
        <button
          class="css-108ffmq-ButtonStyle-MediumButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Medium Button
          </span>
        </button>
        <button
          class="css-14i8ki2-ButtonStyle-SmallButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Small Button
          </span>
        </button>
        <button
          class="css-jkq2c0-ButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Custom theme button
          </span>
        </button>
        <button
          class="css-z1sm09-ButtonStyle-Buttons"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Custom css button
          </span>
        </button>
        <button
          class="css-kg1tm4-ButtonStyle-disabledStyle"
          data-testid=""
          disabled=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Disabled Button
          </span>
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders theme light 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1763vuf-gridStyle"
      >
        <div
          class="css-vgo3dv-headerStyle"
        >
          <button
            class="css-uuujmm-ButtonStyle-SmallButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Show 
              dark
               mode
            </span>
          </button>
        </div>
        <section
          class="css-zinvco-buttonWrapperStyle"
        >
          <button
            class="css-1r1n7-ButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Primary Button
            </span>
          </button>
          <button
            class="css-7dpyr5-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Secondary Button
            </span>
          </button>
          <button
            class="css-5bt0er-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent1 Button
            </span>
          </button>
          <button
            class="css-ks38wz-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent2 Button
            </span>
          </button>
          <button
            class="css-1k1w3fd-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent3 Button
            </span>
          </button>
          <button
            class="css-1qj7ukk-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Accent4 Button
            </span>
          </button>
          <button
            class="css-1aimsza-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Muted Button
            </span>
          </button>
          <button
            class="css-1hel2kz-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Highlight Button
            </span>
          </button>
          <button
            class="css-1yln3xu-ButtonStyle-VariantStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Gray Button
            </span>
          </button>
          <button
            class="css-oa2286-ButtonStyle-MediumButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Medium Button
            </span>
          </button>
          <button
            class="css-uuujmm-ButtonStyle-SmallButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Small Button
            </span>
          </button>
          <button
            class="css-19my0at-ButtonStyle"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Custom theme button
            </span>
          </button>
          <button
            class="css-6uqtiu-ButtonStyle-Buttons"
            data-testid=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Custom css button
            </span>
          </button>
          <button
            class="css-5wy50-ButtonStyle-disabledStyle"
            data-testid=""
            disabled=""
            id=""
            testid=""
            type="button"
          >
            <span>
              Disabled Button
            </span>
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1763vuf-gridStyle"
    >
      <div
        class="css-vgo3dv-headerStyle"
      >
        <button
          class="css-uuujmm-ButtonStyle-SmallButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Show 
            dark
             mode
          </span>
        </button>
      </div>
      <section
        class="css-zinvco-buttonWrapperStyle"
      >
        <button
          class="css-1r1n7-ButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Primary Button
          </span>
        </button>
        <button
          class="css-7dpyr5-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Secondary Button
          </span>
        </button>
        <button
          class="css-5bt0er-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent1 Button
          </span>
        </button>
        <button
          class="css-ks38wz-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent2 Button
          </span>
        </button>
        <button
          class="css-1k1w3fd-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent3 Button
          </span>
        </button>
        <button
          class="css-1qj7ukk-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Accent4 Button
          </span>
        </button>
        <button
          class="css-1aimsza-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Muted Button
          </span>
        </button>
        <button
          class="css-1hel2kz-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Highlight Button
          </span>
        </button>
        <button
          class="css-1yln3xu-ButtonStyle-VariantStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Gray Button
          </span>
        </button>
        <button
          class="css-oa2286-ButtonStyle-MediumButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Medium Button
          </span>
        </button>
        <button
          class="css-uuujmm-ButtonStyle-SmallButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Small Button
          </span>
        </button>
        <button
          class="css-19my0at-ButtonStyle"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Custom theme button
          </span>
        </button>
        <button
          class="css-6uqtiu-ButtonStyle-Buttons"
          data-testid=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Custom css button
          </span>
        </button>
        <button
          class="css-5wy50-ButtonStyle-disabledStyle"
          data-testid=""
          disabled=""
          id=""
          testid=""
          type="button"
        >
          <span>
            Disabled Button
          </span>
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
